[package]
name = "compiletime"
description = "Get the time at compile-time."
version = "1.0.0"
authors = ["aspen <luxx4x@protonmail.com>"]
edition = "2018"
license = "Zlib"
keywords = ["time", "proc-macro"]
repository = "https://github.com/luxxxxy/compiletime-rs"
readme = "README.md"
categories = ["date-and-time"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
lazy_static = "1.4"